updated resource method to extract database